[tool.black]
line-length = 79

[tool.poetry]
name = "pygasus"
version = "0.4"
description = "A lightweight ORM built on top of Pydantic"

license = "BSD3"

authors = [
    "Vincent Le Goff <vincent.legoff.srs@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/talismud/pygasus"
homepage = "https://github.com/talismud/pygasus"

keywords = ['ORM', 'Pydantic', 'SQL', 'SQLAlchemy']

[tool.poetry.dependencies]
python = ">=3.7"  # Compatible python versions must be declared here
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
