[tool.black]
line-length = 79

[tool.poetry]
name = "pygasus"
version = "0.10.1"
description = "A lightweight ORM built on top of Pydantic"
license = "BSD-3-Clause"
authors = [
    "Vincent Le Goff <vincent.legoff.srs@gmail.com>"
]
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/talismud/pygasus"
homepage = "https://github.com/talismud/pygasus"
documentation = "https://github.com/talismud/pygasus"
keywords = ['ORM', 'Pydantic', 'SQL', 'SQLAlchemy']
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
alembic = "^1.7.7"
email-validator = "^1.1.3"
python = ">=3.7"  # Compatible python versions must be declared here
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.22"
typing-compat = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
black = "^21.9b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
